# deconvolute

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
examples/fmdv/: o1m_deconvolute.txt  o1m_i23_with_phases.mtz  o1m_ncs.txt
fsmelt/: Makefile  Makefile.am  Makefile.in  fsmelt  fsmelt.f
gapsrc/: Makefile  Makefile.am  Makefile.in  average.fcm  c2-linux32.c  c2-linux64.c  c2.c  g2.f  g2.inc  gap  gap6.5.0-rme.for  gap6.5.0-save.for  gap650-280410.for  gap650-nosubaver-rme.for  getword14.f  gw14.inc  m2-linux64.f  m2-p2.inc  m2.f  m2.inc  m2_io-linux64.f  m2_io.f  m2_mem-linux32.f  m2_mem.f  m2_sys-linux64.f  m2_sys.f  m2_vms.inc  makevers  makevers.f  p2.f  p2.inc  p2_io.f  p2_mem-linux32.f  p2_mem.f  p2_mem.inc  p2_str.f  p2_sys.f  subaver-rme.for
gapsrc/.deps/: c2-linux64.Po
libccp4/: Makefile  config.h  config.status  libccp4c.pc  libccp4f.pc  libtool  sorting_commons.mod
libccp4/.svn/: entries
libccp4/build-aux/.svn/: entries
libccp4/ccp4/: ccp4_array.lo  ccp4_general.lo  ccp4_parser.lo  ccp4_program.c  ccp4_program.lo  ccp4_unitcell.lo  cmap_accessor.lo  cmap_close.lo  cmap_data.lo  cmap_header.lo  cmap_labels.lo  cmap_open.lo  cmap_skew.lo  cmap_stats.lo  cmap_symop.lo  cmtzlib.lo  csymlib.lo  cvecmat.lo  library_err.lo  library_file.lo  library_utils.lo  pack_c.lo
libccp4/ccp4/.deps/: ccp4_array.Plo  ccp4_general.Plo  ccp4_parser.Plo  ccp4_program.Plo  ccp4_unitcell.Plo  cmap_accessor.Plo  cmap_close.Plo  cmap_data.Plo  cmap_header.Plo  cmap_labels.Plo  cmap_open.Plo  cmap_skew.Plo  cmap_stats.Plo  cmap_symop.Plo  cmtzlib.Plo  csymlib.Plo  cvecmat.Plo  library_err.Plo  library_file.Plo  library_utils.Plo  pack_c.Plo
libccp4/ccp4/.libs/: libccp4c.la  libccp4c.lai
libccp4/ccp4/.svn/: entries
libccp4/ccp4/.svn/text-base/: ccp4_general.c.svn-base  ccp4_program.c.svn-base  ccp4_program.h.svn-base  ccp4_sysdep.h.svn-base  csymlib.c.svn-base  library_utils.c.svn-base
libccp4/data/.svn/: entries
libccp4/fortran/: ccplib.lo  dna_output.lo  fftlib.lo  fortran_libccp4f_la-ccp4_diskio_f.lo  fortran_libccp4f_la-ccp4_general_f.lo  fortran_libccp4f_la-ccp4_parser_f.lo  fortran_libccp4f_la-ccp4_unitcell_f.lo  fortran_libccp4f_la-cmaplib_f.lo  fortran_libccp4f_la-cmtzlib_f.lo  fortran_libccp4f_la-csymlib_f.lo  fortran_libccp4f_la-library_f.lo  keyparse.lo  lgglib.lo  libhtml.lo  modlib.lo  pack_f.lo  parser.lo  plot84lib.lo  plotsubs.lo  pxxml.lo  rwbrook.lo  sorting_main.lo  unix.f  unix.lo
libccp4/fortran/.deps/: fortran_libccp4f_la-ccp4_diskio_f.Plo  fortran_libccp4f_la-ccp4_general_f.Plo  fortran_libccp4f_la-ccp4_parser_f.Plo  fortran_libccp4f_la-ccp4_unitcell_f.Plo  fortran_libccp4f_la-cmaplib_f.Plo  fortran_libccp4f_la-cmtzlib_f.Plo  fortran_libccp4f_la-csymlib_f.Plo  fortran_libccp4f_la-library_f.Plo
libccp4/fortran/.libs/: libccp4f.la  libccp4f.lai
libccp4/fortran/.svn/: entries
libccp4/m4/.svn/: entries
map_to_sfsrc/: Makefile  Makefile.am  Makefile.in  change_sg.f90  check_full_symm.f90  check_symmetry.f90  extract.f90  ffl_ortho_2.f90  ffl_p1.f90  ffl_p1p.f90  ffl_p2p_dxml.f90  ffl_p2p_te.f90  fftrr.for  fftutils.for  map_to_sf  map_to_sf.f90  mapdefs.f90  mapdefs.mod  mapread.for  read_options.for  space_group.f90  space_group.mod  space_group_setup.f90  write_mtz.for
src/: Deconvoluter.cpp  Deconvoluter.h  FileParser.cpp  FileParser.h  FileReader.cpp  Holder.cpp  Holder.h  InputFileParser.cpp  InputFileParser.h  Makefile  Makefile.am  Makefile.in  Matrix.cpp  Matrix.h  Miller.cpp  Miller.h  MtzManager.cpp  MtzManager.h  StatisticsManager.cpp  StatisticsManager.h  Vector.cpp  Vector.h  deconvolute  main.cpp  parameters.h
src/.deps/: Deconvoluter.Po  FileParser.Po  FileReader.Po  Holder.Po  InputFileParser.Po  Matrix.Po  Miller.Po  MtzManager.Po  StatisticsManager.Po  Vector.Po  main.Po  misc.Po
xcode/DerivedData/ModuleCache/: Session.modulevalidation
xcode/DerivedData/deconvolute/: FindHistory.xcfind  info.plist
xcode/DerivedData/deconvolute/Index/Release/macosx10.10-x86_64/deconvolute.xcindex/: db.xcindexdb-shm  db.xcindexdb.strings-dir  db.xcindexdb.strings-file  db.xcindexdb.strings-res  db.xcindexdb.strings-sym
xcode/DerivedData/deconvolute/Logs/Debug/: Cache.db  E92DD025-B058-4BDC-8128-229297DC23AD.xcactivitylog
xcode/DerivedData/deconvolute/Logs/Issues/: Cache.db  E8C41257-9C34-4FC8-81B5-0E115F3692B9.xcactivitylog
xcode/DerivedData/deconvolute/TextIndex/: text-filter.idx
xcode/deconvolute.xcodeproj/: project.pbxproj
xcode/deconvolute.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/deconvolute.xcodeproj/project.xcworkspace/xcuserdata/helenginn.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/deconvolute.xcodeproj/xcuserdata/helenginn.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/deconvolute.xcodeproj/xcuserdata/helenginn.xcuserdatad/xcschemes/: deconvolute.xcscheme  xcschememanagement.plist
